inset and footer

--- a/src/index.html
+++ b/src/index.html
@@ -88,13 +88,26 @@
 
       <hr>
   
-      <div class="c-inset"></div>
+      <div class="c-inset">
         <div class="c-inset__hero">
           <img src="images/worker.png">
         </div>
+        <div class="c-inset__info">
+          <li class="c-inset__info--list">Logged-in Negotiator</li>
+          <li class="c-inset__info--list">Team Leader</li>
+          <li class="c-inset__info--list">E:<a href="#">loggedinuser@reapit.com</a></li>
+          <li class="c-inset__info--list">T: 0845 330 2965</li>
+        </div>
+      </div>
       <hr>
   
-      <div class="c-footer"></div>
+      <div class="c-footer">
+        <div class="c-footer__main">
+          <p class="c-footer__main--text">If you would prefer not to receive emails from us in future, please<a href="#">unsubscribe</a>.</p>
+          <p class="c-footer__main--text">This email and any attachments to it may be confidential and are intended soley for the use of the individual to whom it is addressed. Any views or opinions expressed are soley thos of the author and do not necessarily represent those of Reapit Software Ltd.</p>
+          <p class="c-footer__main--text">Reapit Ltd. - Company registration: 3483017 (England and Wales)<br />Registered Office: 67-74 Safron Hill, 3rd Floor, Farringdon, EC1N 8QX, UK</p>
+        </div>
+      </div>
 
     </div>
   </div>
