--- a/src/index.html
+++ b/src/index.html
@@ -89,9 +89,7 @@
       <hr>
   
       <div class="c-inset">
-        <div class="c-inset__hero">
-          <img src="images/worker.png">
-        </div>
+        <img src="images/worker.png" class="c-inset__hero">
         <div class="c-inset__info">
           <li class="c-inset__info--list">Logged-in Negotiator</li>
           <li class="c-inset__info--list">Team Leader</li>
