font variable changes

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
         </div>
           
         <div class="c-header__intro">
-          <p class="c-header__intro--text">Dear MS Macarthur,</p>
+          <p class="c-header__intro--text">Dear Ms Macarthur,</p>
           <p class="c-header__intro--text">Please find below some of the properties that we feel may be of interest to you.</p>
           <p class="c-header__intro--text">We will of course keep you regularly updated with new properties that come to the market. Please do contact us should these properties be of interest and we will be delighted to arrange internal viewings for you.</p>
         </div>
@@ -44,7 +44,7 @@
           <p class="c-advert__hero--contact">Call<a href="#">0118 496 0005</a>for further information</p>
         </div>
         <div class="c-advert__details">
-          <h2 class="c-advert__details--title">Grey Stones, 22 Brook Lane, Renhold, Bedfordshire, MK41 OLD</h2>
+          <h2 class="c-advert__details--title"><a href="#">Grey Stones, 22 Brook Lane, Renhold, Bedfordshire, MK41 OLD</a></h2>
           <h3 class="c-advert__details--header">Guide Price: &pound;950,000</h3>
           <div class="c-advert__details--nav">
             <li class="c-advert__details--nav-list">6 Bed</li>
@@ -69,7 +69,7 @@
           <p class="c-advert__hero--contact"><a href="#">Full Property Details</a></p>
         </div>
         <div class="c-advert__details">
-          <h2 class="c-advert__details--title">Sunny Bank, Church Street, Ringstead, Northamptonshire, NN14 4DH</h2>
+          <h2 class="c-advert__details--title"><a href="#">Sunny Bank, Church Street, Ringstead, Northamptonshire, NN14 4DH</a></h2>
           <h3 class="c-advert__details--header">Offers in excess of: &pound;1,000,000</h3>
           <div class="c-advert__details--nav">
             <li class="c-advert__details--nav-list">7 Bed</li>
